--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@types/node": "^12.0.0",
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
+        "axios": "^1.2.5",
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
         "express": "^4.17.1",
@@ -19,7 +20,8 @@
         "react-scripts": "4.0.3",
         "typescript": "^4.1.2",
         "uuid": "^8.3.2",
-        "web-vitals": "^1.0.1"
+        "web-vitals": "^1.0.1",
+        "zustand": "^4.3.2"
     },
     "scripts": {
         "start-server": "node ./server",
