--- a/package.json
+++ b/package.json
@@ -51,5 +51,10 @@
         "@types/react-router-dom": "^5.1.8",
         "superagent": "^6.1.0",
         "supertest": "^6.1.4"
+    },
+    "jest": {
+        "moduleNameMapper": {
+            "axios": "axios/dist/node/axios.cjs"
+        }
     }
 }
