--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     },
     "devDependencies": {
         "@types/react-router-dom": "^5.1.8",
+        "@types/uuid": "^9.0.0",
         "superagent": "^6.1.0",
         "supertest": "^6.1.4"
     },
